--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,17 @@
         <dependency>
             <groupId>net.gravitydevelopment.updater</groupId>
             <artifactId>updater</artifactId>
-            <version>LATEST</version>
+            <version>2.1</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/updater-2.1.jar</systemPath>
         </dependency>
+
+<!--        This is only temporarily cause on gravity's repo is an outdated version-->
+<!--        <dependency>
+            <groupId>net.gravitydevelopment.updater</groupId>
+            <artifactId>updater</artifactId>
+            <version>LATEST</version>
+        </dependency>-->
 
         <!--API for economy, permissions and chat-->
         <dependency>
