add uSkyBlock dependency
Supports adding the island level with the %island_level% variable, with
the stable version of uSkyBlock (1.0.8)


Former-commit-id: 55f5f32a939023a10e9dc242f926a7471f619167 [formerly 87add14131acf261cdc749697ebb3df652bfa65c]
Former-commit-id: fd8e791c6299fdcbfc4c6e71fd4ab17012bd1494

--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,13 @@
             <scope>system</scope>
             <systemPath>${project.basedir}/lib/mcore.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>us.talabrek.ultimateskyblock</groupId>
+            <artifactId>uSkyBlock</artifactId>
+            <version>1.0.8</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/uSkyBlock.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
