--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
             <id>simpleclans-repo</id>
             <url>http://repo.sacredlabyrinth.net:8081/artifactory/releases/</url>
         </repository>
+        
+        <repository>
+            <id>vault-repo</id>
+            <url>http://nexus.theyeticave.net/content/repositories/pub_releases</url>
+        </repository>
 
         <!--for mcMMO-->
         <repository>
