Fix class not found by ebean
Former-commit-id: 39c9a58cf7d788c58153660c526d3c61ce93394b [formerly e8612457854ee37d727b11d583e9a4d329444321]
Former-commit-id: fb8436c504bddd74e24125d965b0344231ee9f5c

--- a/src/main/resources/characters.properties
+++ b/src/main/resources/characters.properties
@@ -1,4 +1,4 @@
-#Here can you read and edit all special characters
+#Here can you read and edit all special characters including defining own constants
 [<3]=\u2764
 [check]=\u2714
 
