--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,5 +1,8 @@
 #Main configuration
 
+#Compatible mode with other plugins
+compatibilityMode: false
+
 disabled-worlds:
   - world_nether
   - city
@@ -13,7 +16,7 @@ Scoreboard:
   # For instant updates you can or 1 and it will update every second
   Update-delay: 2
   Items:
-    #The Title must have under 16 characters
+    #The Title must have under 48 characters
     #Title: Type
     '&9Online': '%online%'
     '&9Money': '%money%'
