--- a/pom.xml
+++ b/pom.xml
@@ -176,7 +176,7 @@
         <!--API for economy, permissions and chat-->
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
-            <artifactId>Vault</artifactId>
+            <artifactId>VaultAPI</artifactId>
             <version>LATEST</version>
         </dependency>
 
